# miscreant.rs

./: .travis.yml  CHANGES.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml
benches/src/: aes_gcm.rs  aes_pmac_siv.rs  aes_siv.rs
src/: aead.rs  bench.rs  ctr.rs  ffi.rs  lib.rs  polyval.rs  s2v.rs  siv.rs  stream.rs
tests/: aead_test.rs  siv_test.rs  stream_test.rs
tests/aead_vectors/: mod.rs
tests/siv_vectors/: mod.rs
tests/stream_vectors/: mod.rs
