[package]
name        = "miscreant"
description = """
              Symmetric encryption library providing misuse-resistant
              authenticated encryption (MRAE) including AES-SIV (RFC 5297),
              AES-PMAC-SIV, and the STREAM segmented encryption construction.
              """
version     = "0.4.0-beta2" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 or MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/miscreant-rs"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["aes", "cryptography", "encryption", "security", "streaming"]
edition     = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
aes = "0.1.0"
crypto-mac = "0.6"
block-modes = "0.1"
byteorder = { version = "1.2", default-features = false }
cmac = "0.1"
dbl = "0.1"
pmac = "0.1"
ring = { version = "0.13", optional = true }
subtle = { version = "0.3", default-features = false }
zeroize = { version = "0.4", default-features = false, features = ["linux-backport", "windows"] }

[dev-dependencies]
data-encoding = "2.0"
serde_json = "1"

[features]
aes-soft = ["aes/force_soft"]
alloc = []
bench = ["ring"]
default = ["std"]
nightly = ["zeroize/nightly"]
staticlib = []
std = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
rpath = false

[package.metadata.docs.rs]
features = ["std"]
rustc-args = ["-Ctarget-feature=+aes"]
