[package]
name        = "miscreant"
description = """
              Symmetric encryption library providing misuse-resistant
              authenticated encryption (MRAE) including AES-SIV (RFC 5297),
              AES-PMAC-SIV, and the STREAM segmented encryption construction.
              """
version     = "0.4.2" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/miscreant.rs"
readme      = "README.md"
categories  = ["cryptography", "no-std"]
keywords    = ["aes", "cryptography", "encryption", "security", "streaming"]
edition     = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[badges]
travis-ci = { repository = "miscreant/miscreant.rs" }

[dependencies]
aes = { version = "0.3", default-features = false, optional = true }
byteorder = { version = "1.2", default-features = false, optional = true }
cmac = { version = "0.2", default-features = false }
crypto-mac = { version = "0.7", default-features = false }
ctr = { version = "0.3", default-features = false }
dbl = { version = "0.2", default-features = false }
generic-array = { version = "0.12", default-features = false }
pmac = { version = "0.2", default-features = false }
stream-cipher = { version = "0.3", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "0.5", default-features = false }

[target.'cfg(all(target_feature="aes", target_feature = "sse2", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
aesni = { version = "0.6", default-features = false }

[dev-dependencies]
subtle-encoding = "0.3"
serde_json = "1"

[features]
alloc = []
default = ["std", "stream"]
nightly = ["zeroize/nightly"]
soft-aes = ["aes"]

std = ["alloc"]
stream = ["byteorder"]

[workspace]
members = [".", "benches"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
features = ["soft-aes"]
