[package]
name = "miscreant"
description = """
Symmetric encryption library providing misuse-resistant
authenticated encryption (MRAE) including AES-SIV (RFC 5297),
AES-PMAC-SIV, and the STREAM segmented encryption construction.
"""
version    = "0.5.2" # Also update html_root_url in lib.rs when bumping this
license    = "Apache-2.0 OR MIT"
authors    = ["Tony Arcieri <bascule@gmail.com>"]
homepage   = "https://miscreant.io"
repository = "https://github.com/miscreant/miscreant.rs"
readme     = "README.md"
categories = ["cryptography", "no-std"]
keywords   = ["aes", "cryptography", "encryption", "security", "streaming"]
edition    = "2018"

[badges]
travis-ci = { repository = "miscreant/miscreant.rs" }

[dependencies]
aes = { version = "0.5", default-features = false }
aes-siv = { version = "0.2", default-features = false }
cmac = { version = "0.2", default-features = false }
crypto-mac = { version = "0.7", default-features = false }
ctr = { version = "0.3", default-features = false }
pmac_crate = { package = "pmac", version = "0.2", optional = true, default-features = false }
stream-cipher = { version = "0.3", default-features = false }

[dev-dependencies]
subtle-encoding = "0.5"
serde_json = "1"

[features]
default = ["std", "pmac", "stream"]
alloc = ["aes-siv/alloc"]
pmac = ["pmac_crate", "aes-siv/pmac"]
std = ["alloc"]
stream = []

[workspace]
members = [".", "benches"]
